--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_URL=
-REACT_APP_PASSWORD_HASH_KEY=
-REACT_APP_OAUTH_CLIENT_ID=
+REACT_APP_BASE_URL=https://spice-dev-backend.bd.labsplatform.com
+REACT_APP_PASSWORD_HASH_KEY=spice_uat
+REACT_APP_OAUTH_CLIENT_ID=1084211116732-77qlkddrakgpkkv4gkbtf2c5ptikrpa0.apps.googleusercontent.com
