--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.156",
-    "@mui/material": "^5.15.0",
+    "@mui/material": "5.12.1",
+    "@mui/x-data-grid": "^6.18.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
